2009-10-03  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/xbm2pas: new tool

	* pascal/akfavatar.pas (AvatarImageXBM, ShowImageXBM):
	new functions

2009-10-01  Andreas K. Foerster  <info@akfoerster.de>

	* avtposix.c, mingw/avtwindows.c (open_config_file):
	new functions
	avatarsay.c (save_settings, successfully_saved, saving_failed):
	new functions
	(settings_submenu): adapted
	(read_config_file, check_local_config): new functions
	(check_config_file): adapted
	(ask_background_color, ask_balloon_color): adapted

	* avatarsay.c (ask_avatar_image): use correct separator

	* akfavatar.h, avatar.c (get_mode): new function

	* avatarsay.c (save_settings, read_config_file):
	read/restore window mode in config file

2009-09-28  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager_mb): add close button

	* avatar.c (avt_button_inlay): new function
	AVT_XBM_INFO: new macro
	(avt_pager_mb, avt_decide, avt_wait_button): adapted

2009-09-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate): add eject and circle buttons

2009-09-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate): save/restore buttons background

	* avatar.c (avt_initialize): make window not resizable
	remove most code for resizing the window
	(avt_change_mode): new function, was avt_resize

	* avatarsay.c (checkoptions): fix --fullfullscreen

2009-09-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait_button, avt_decide):
	center button-inlays on button

	* akfavatar.h: AVT_NAV_* instead of AVT_DIR_*
	avatar.c (avt_navigate): adapted
	pascal/akfavatar.pas: adapted

2009-09-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate):
	add further buttons: stop, pause, help

	* avatar.c (avt_navigate):
	center button-inlays on button,
	so bitmaps can be made even smaller

2009-09-21  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate):
	add support for fast-forward and fast-backward buttons
